; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/i2c/extr_cs8427.c_swapbits.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/i2c/extr_cs8427.c_swapbits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8 (i8)* @swapbits to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal zeroext i8 @swapbits(i8 zeroext %0) #0 {
  %2 = alloca i8, align 1
  %3 = alloca i32, align 4
  %4 = alloca i8, align 1
  store i8 %0, i8* %2, align 1
  store i8 0, i8* %4, align 1
  store i32 0, i32* %3, align 4
  br label %5

5:                                                ; preds = %24, %1
  %6 = load i32, i32* %3, align 4
  %7 = icmp slt i32 %6, 8
  br i1 %7, label %8, label %27

8:                                                ; preds = %5
  %9 = load i8, i8* %4, align 1
  %10 = zext i8 %9 to i32
  %11 = shl i32 %10, 1
  %12 = trunc i32 %11 to i8
  store i8 %12, i8* %4, align 1
  %13 = load i8, i8* %2, align 1
  %14 = zext i8 %13 to i32
  %15 = and i32 %14, 1
  %16 = load i8, i8* %4, align 1
  %17 = zext i8 %16 to i32
  %18 = or i32 %17, %15
  %19 = trunc i32 %18 to i8
  store i8 %19, i8* %4, align 1
  %20 = load i8, i8* %2, align 1
  %21 = zext i8 %20 to i32
  %22 = ashr i32 %21, 1
  %23 = trunc i32 %22 to i8
  store i8 %23, i8* %2, align 1
  br label %24

24:                                               ; preds = %8
  %25 = load i32, i32* %3, align 4
  %26 = add nsw i32 %25, 1
  store i32 %26, i32* %3, align 4
  br label %5

27:                                               ; preds = %5
  %28 = load i8, i8* %4, align 1
  ret i8 %28
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
